<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Android"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/colorBlack"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">
        <ImageView
            style="@style/MyImage"/>
        <TextView
            style="@style/TextView4"
            android:text="@string/posts"/>
        <TextView
            style="@style/TextView4"
            android:text="@string/followers"/>
        <TextView
            style="@style/TextView4"
            android:text="@string/following"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">
        <ImageView
            style="@style/MyImageSmall"
           />
        <ImageView
            style="@style/MyImageSmall"/>
        <ImageView
            style="@style/MyImageSmall"/>
        <ImageView
            style="@style/MyImageSmall"/>
        <ImageView
            style="@style/MyImageSmall"/>
        <ImageView
            style="@style/MyImageSmall"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp"
        android:layout_gravity="center"
        >
        <TextView
            style="@style/MyBlueTheme"
            android:drawableTop="@drawable/ic_directions_black_36dp"
            android:text="@string/directions"
            />
        <TextView
            style="@style/MyBlueTheme"
            android:drawableTop="@drawable/ic_local_phone_black_36dp"
            android:text="@string/call"
            />
        <TextView
            style="@style/MyBlueTheme"
            android:drawableTop="@drawable/ic_grade_black_36dp"
            android:text="@string/save"
            />
        <TextView
            style="@style/MyBlueTheme"
            android:drawableTop="@drawable/ic_insert_link_black_36dp"
            android:text="@string/website"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center">
        <ImageView
            style="@style/MyImage"/>
        <ImageView
            style="@style/MyImage"/>
        <ImageView
            style="@style/MyImage"/>
    </LinearLayout>


</LinearLayout>