<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorBlack"
        android:textSize="36sp" />

    <EditText
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_shape"
        android:hint="@string/email" />

    <EditText
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_shape"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="2"
            android:checked="true"
            android:text="@string/remember"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@drawable/rounded_for_button"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="24sp"
        android:layout_marginRight="24sp"
        android:textSize="24sp"
        android:text="@string/sign_in"/>
</LinearLayout>