<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/PHOTO"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorGrey"
        android:gravity="center"
        android:text="@string/photo"
        android:textColor="@color/colorBlack"
        android:textSize="56sp" />
    <ImageView
        app:layout_constraintBottom_toBottomOf="@id/PHOTO"
        app:layout_constraintRight_toRightOf="@id/PHOTO"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_camera_alt_white_48dp"
        />
    <TextView
        android:id="@+id/title"
        app:layout_constraintTop_toBottomOf="@id/PHOTO"
        style="@style/Hyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:hint="@string/title" />
    <TextView
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/location"
        android:id="@+id/price"
        style="@style/Hyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@android:dimen/app_icon_size"
        android:paddingTop="48dp"
        android:hint="@string/price"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/location"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/price"
        style="@style/Hyperlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_room_grey600_48dp"
        android:paddingTop="48dp"
        android:hint="@string/location" />
    <TextView
        android:id="@+id/description"
        app:layout_constraintTop_toBottomOf="@id/location"
        style="@style/Hyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:hint="@string/description" />
    <TextView
        android:id="@+id/inventory"
        android:paddingTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        style="@style/Hyperlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inventory" />

    <TextView
        android:id="@+id/enable"
        android:paddingTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintLeft_toRightOf="@id/inventory"
        app:layout_constraintRight_toLeftOf="@id/weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false" />

    <TextView
        android:id="@+id/weight"
        android:paddingTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintLeft_toRightOf="@id/enable"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Hyperlink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight" />

</androidx.constraintlayout.widget.ConstraintLayout>